--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "react": "^16.12.0",
     "react-apollo": "^3.1.3",
     "react-dom": "^16.12.0",
+    "react-js-snackbar": "^1.0.4",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.1",
     "react-table": "^7.0.0-rc.15",
-    "styled-components": "^5.0.1"
+    "styled-components": "^5.0.1",
+    "yup": "^0.28.1"
   },
   "scripts": {
     "start": "react-scripts start",
