--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "http://satishsuccessive.github.io/react-user-permission-task-client",
   "name": "react-client-view",
   "version": "0.1.0",
   "private": true,
@@ -13,7 +14,7 @@
     "react": "^16.12.0",
     "react-apollo": "^3.1.3",
     "react-dom": "^16.12.0",
-    "react-js-snackbar": "^1.0.4",
+    " ": "^1.0.4",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.1",
     "react-table": "^7.0.0-rc.15",
@@ -24,7 +25,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
