--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "react": "^16.12.0",
     "react-apollo": "^3.1.3",
     "react-dom": "^16.12.0",
-    " ": "^1.0.4",
+    "react-js-snackbar": "^1.0.4",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.1",
     "react-table": "^7.0.0-rc.15",
@@ -45,6 +45,7 @@
     ]
   },
   "devDependencies": {
-    "eslint-plugin-react-hooks": "^2.3.0"
+    "eslint-plugin-react-hooks": "^2.3.0",
+    "gh-pages": "^2.2.0"
   }
 }
